Removed gh-pages

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "my-app",
+  "name": "FlixTv",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://amit.akuka.github.io/FlixTV/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -31,7 +30,6 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -53,8 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
